# shadNet

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  README.md  REUSE.toml  scoreboards.cfg  worlds.cfg
.github/workflows/: build.yml
clientsample/: CMakeLists.txt  client.cpp  client.h  connection.cpp  connection.h  main.cpp  packet.h  shadnet.proto  types.h
clientsample/proto/: score.proto
clientsample/samples/: block-add.bat  block-remove.bat  friend-add.bat  friend-remove.bat  login.bat  register.bat  room-create.bat  room-join.bat  room-leave.bat  room-list.bat  score-board.bat  score-get-accountid.bat  score-get-data-accountid.bat  score-get-npid.bat  score-range.bat  score-record.bat  setup-test-accounts.bat  walkthrough-block.bat  walkthrough-friends.bat  walkthrough-matching.bat  walkthrough-scores-accountid.bat  walkthrough-scores.bat
documentation/: database.md  matching.md  protocol.md  signaling.md
src/: client_session.cpp  client_session.h  cmd_account.cpp  cmd_friend.cpp  cmd_matching.cpp  cmd_score.cpp  config.cpp  config.h  database.cpp  database.h  main.cpp  matching.h  matching_types.h  proto_utils.h  protocol.h  score_cache.cpp  score_cache.h  score_db.cpp  score_db.h  score_files.h  score_types.h  server.cpp  server.h  shadnet.proto  stats_server.cpp  stats_server.h  stream_extractor.h  stun_server.cpp  stun_server.h  webapi_auth.cpp  webapi_auth.h  webapi_routes_common.h  webapi_routes_presence.cpp  webapi_routes_presence.h  webapi_routes_profile.cpp  webapi_routes_profile.h  webapi_routes_session.cpp  webapi_routes_session.h  webapi_routes_users.cpp  webapi_routes_users.h  (+2 more)
